# agentic_assistant

./: .dockerignore  .gitignore  .uvicornignore  Dockerfile  README.md  docker_fab_local_setup.md  main.py  models.py  pyproject.toml  requirements.txt  requirements_original.txt  setup.py  start.sh  test_chat.py  test_health.py
.github/workflows/: dev-agentic-assistant-AutoDeployTrigger-123b8a32-df61-460a-b094-8d66bf59ea78.yml  dev_dev-agentic-framework-cwa.yml  master_agentic-assistant-api.yml  master_agentic-assistant.yml  master_agenticassistant.yml
agent/: agent.py  browser_tool.py  callbacks.py  logging.py  tools.py
agentic_assistant/: __init__.py
agentic_assistant/agents/: __init__.py  conversational.py
agentic_assistant/api/: __init__.py  endpoints.py  models.py
agentic_assistant/core/: __init__.py  config.py  logging.py  session.py  state.py
agentic_assistant/tools/: __init__.py  browser_integration.py  registry.py  search.py  terminal.py
browser_use/: __init__.py  cli.py  exceptions.py
browser_use/agent/: gif.py  playwright_script_generator.py  playwright_script_helpers.py  prompts.py  service.py  system_prompt.md  views.py
browser_use/browser/: browser.py  chrome.py  context.py  dolphin_service.py  views.py
browser_use/controller/: service.py  views.py
browser_use/dom/: buildDomTree.js  service.py  views.py
browser_use/telemetry/: service.py  views.py
browser_use/utils/: __init__.py  (+3 more)
docs/: ARCHITECTURE_GUIDE.md
frontend/: README.md  package-lock.json  package.json  playwright.config.js
knowledge_base/: agent_guidelines.md
(+18 files in other folders)
