[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic_assistant"
version = "0.4.0"
description = "AI-powered assistant with browser automation capabilities"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "playwright",
    "langchain",
    "langchain_openai",
    "python-dotenv",
    # Add other dependencies as needed
]

[project.urls]
"Homepage" = "https://github.com/yourusername/agentic_assistant"
"Bug Tracker" = "https://github.com/yourusername/agentic_assistant/issues"
